audio and osc basically (almost) working. shared-array-buffer prob
- so all pieces are in place, OSC messages seem to be correctly encoded
- audio driver start/stop now in place
- but we get these errors:

Uncaught TypeError: Failed to execute 'copyToChannel' on 'AudioBuffer': The provided ArrayBufferView value must not be shared.
    at ScriptProcessorNode.ad.proc.onaudioprocess (scsynth.js:1688)
ad.proc.onaudioprocess @ scsynth.js:1688

It seems that because of `-pthread`, the HEAP is now backed by
`SharedArrayBuffer`, and that in turn cannot be used in `copyToChannel`.

Hopefully, we can just make one additional copy. If not, we're f*cked
:-O

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script src="osc.min.js" type="text/javascript"></script>
+    <script type='text/javascript'>
+      var sendOSC = function(m) {
+        var data  = osc.writePacket(m, { metadata: true });
+        var tgt   = { ip: "127.0.01", port: 57110 };
+        Module.oscDriver.send(tgt, data);
+      };
+      var dumpOSC = function(code) {
+        code = code ? code : 1;
+        sendOSC({ address: "/dumpOSC", args: [{ type: "i", value: code }]});
+      }
+    </script>
     <title>scsynth</title>
     <style>
       body {
@@ -80,10 +92,10 @@
   <body>
     <div class="emscripten" id="status">Downloading...</div>
 
-<span id='controls'>
-  <span><input type="button" id="boot" disabled="disabled" value="Boot" onclick="Module.callMain(Module['arguments']);">
-  </span>
-</span>
+    <span id='controls'>
+      <span><input type="button" id="boot" disabled="disabled" value="Boot" onclick="Module.callMain(Module['arguments']);">
+      </span>
+    </span>
 
     <div class="emscripten">
       <progress value="0" max="100" id="progress" hidden=1></progress>
