--- a/wasm/index.html
+++ b/wasm/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script src="osc.min.js" type="text/javascript"></script>
     <script type='text/javascript'>
+      // here are some utility functions for OSC
+      // and one example synth-def ("analog bubbles" with two
+      // controls named "freq1" and "freq2").
       var sendOSC = function(name, ...args) {
         var data  = osc.writePacket({ address: name, args: args });
         var tgt   = { ip: "127.0.01", port: 57110 };
@@ -18,6 +21,7 @@
         var tgt   = { ip: "127.0.01", port: 57110 };
         Module.oscDriver.send(tgt, data);
       };
+      // the binary SynthDef blob
       var bubblesDef = Uint8Array.from(
         [83, 67, 103, 102, 0, 0, 0, 1, 0, 1, 13, 65, 110, 97, 108, 111, 103, 66, 117, 98, 98, 108, 101, 115, 0, 7, 0, 0, 0, 0, 64, 64, 0, 0, 66, -96, 0, 0, 65, -64, 0, 0, 61, 35, -41, 10, 62, 76, -52, -51, 64, -128, 0, 0, 0, 3, 62, -52, -52, -51, 65, 0, 0, 0, 63, 103, 92, 41, 0, 3, 5, 102, 114, 101, 113, 49, 0, 0, 5, 102, 114, 101, 113, 50, 0, 1, 6, 100, 101, 116, 117, 110, 101, 0, 2, 0, 18, 7, 67, 111, 110, 116, 114, 111, 108, 1, 0, 0, 0, 3, 0, 0, 1, 1, 1, 5, 76, 70, 83, 97, 119, 2, 0, 2, 0, 1, 0, 0, 0, 0, 0, 0, -1, -1, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 1, 0, 2, 0, 1, 0, 2, 0, 0, 0, 1, 0, 0, 0, 2, 1, 5, 76, 70, 83, 97, 119, 2, 0, 2, 0, 1, 0, 0, 0, 2, 0, 0, -1, -1, 0, 0, 2, 6, 77, 117, 108, 65, 100, 100, 2, 0, 3, 0, 1, 0, 0, 0, 3, 0, 0, -1, -1, 0, 1, -1, -1, 0, 2, 2, 6, 77, 117, 108, 65, 100, 100, 2, 0, 3, 0, 1, 0, 0, 0, 1, 0, 0, -1, -1, 0, 3, 0, 4, 0, 0, 2, 11, 85, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 1, 0, 1, 0, 17, 0, 5, 0, 0, 2, 6, 83, 105, 110, 79, 115, 99, 2, 0, 2, 0, 1, 0, 0, 0, 6, 0, 0, -1, -1, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 2, 0, 1, 0, 2, 0, 7, 0, 0, -1, -1, 0, 4, 2, 5, 67, 111, 109, 98, 78, 2, 0, 4, 0, 1, 0, 0, 0, 8, 0, 0, -1, -1, 0, 5, -1, -1, 0, 5, -1, -1, 0, 6, 2, 5, 76, 70, 83, 97, 119, 2, 0, 2, 0, 1, 0, 0, 0, 0, 0, 1, -1, -1, 0, 0, 2, 6, 77, 117, 108, 65, 100, 100, 2, 0, 3, 0, 1, 0, 0, 0, 10, 0, 0, -1, -1, 0, 1, -1, -1, 0, 2, 2, 6, 77, 117, 108, 65, 100, 100, 2, 0, 3, 0, 1, 0, 0, 0, 1, 0, 0, -1, -1, 0, 3, 0, 11, 0, 0, 2, 11, 85, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 1, 0, 1, 0, 17, 0, 12, 0, 0, 2, 6, 83, 105, 110, 79, 115, 99, 2, 0, 2, 0, 1, 0, 0, 0, 13, 0, 0, -1, -1, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 2, 0, 1, 0, 2, 0, 14, 0, 0, -1, -1, 0, 4, 2, 5, 67, 111, 109, 98, 78, 2, 0, 4, 0, 1, 0, 0, 0, 15, 0, 0, -1, -1, 0, 5, -1, -1, 0, 5, -1, -1, 0, 6, 2, 3, 79, 117, 116, 2, 0, 3, 0, 0, 0, 0, -1, -1, 0, 0, 0, 16, 0, 0, 0, 9, 0, 0, 0, 0]
       );
@@ -25,9 +29,11 @@
         code = code ? code : 1;
         sendOSC_t("/dumpOSC", "i", code);
       };
+      // send the "AnalogBubbles" synth-def to the server
       var d_bubbles = function() {
         sendOSC_t("/d_recv", "b", bubblesDef);
       };
+      // start a synth with the "AnalogBubbles" synth-def
       var s_bubbles = function() {
         sendOSC_t("/s_new", "siii", "AnalogBubbles", 1000, 1, 0);
       };
@@ -91,7 +97,7 @@
 
       #output {
         width: 100%;
-        height: 200px;
+        height: 480px;
         margin: 0 auto;
         margin-top: 10px;
         border-left: 0px;
