--- a/wasm/index.html
+++ b/wasm/index.html
@@ -11,15 +11,14 @@
       var sendOSC = function(name, ...args) {
         var data  = osc.writePacket({ address: name, args: args });
         var tgt   = { ip: "127.0.01", port: 57110 };
-        Module.oscDriver.send(tgt, data);
+        Module.oscDriver.send(57120, 57110, data);
       };
       var sendOSC_t = function(name, tags, ...args) {
         for (i = 0; i < args.length; i++) {
           args[i] = { type: tags[i], value: args[i] };
         }
         var data  = osc.writePacket({ address: name, args: args }, { metadata: true });
-        var tgt   = { ip: "127.0.01", port: 57110 };
-        Module.oscDriver.send(tgt, data);
+        Module.oscDriver.send(57120, 57110, data);
       };
       // the binary SynthDef blob
       var bubblesDef = Uint8Array.from(
