--- a/wasm/index.html
+++ b/wasm/index.html
@@ -24,18 +24,50 @@
       var bubblesDef = Uint8Array.from(
         [83, 67, 103, 102, 0, 0, 0, 1, 0, 1, 13, 65, 110, 97, 108, 111, 103, 66, 117, 98, 98, 108, 101, 115, 0, 7, 0, 0, 0, 0, 64, 64, 0, 0, 66, -96, 0, 0, 65, -64, 0, 0, 61, 35, -41, 10, 62, 76, -52, -51, 64, -128, 0, 0, 0, 3, 62, -52, -52, -51, 65, 0, 0, 0, 63, 103, 92, 41, 0, 3, 5, 102, 114, 101, 113, 49, 0, 0, 5, 102, 114, 101, 113, 50, 0, 1, 6, 100, 101, 116, 117, 110, 101, 0, 2, 0, 18, 7, 67, 111, 110, 116, 114, 111, 108, 1, 0, 0, 0, 3, 0, 0, 1, 1, 1, 5, 76, 70, 83, 97, 119, 2, 0, 2, 0, 1, 0, 0, 0, 0, 0, 0, -1, -1, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 1, 0, 2, 0, 1, 0, 2, 0, 0, 0, 1, 0, 0, 0, 2, 1, 5, 76, 70, 83, 97, 119, 2, 0, 2, 0, 1, 0, 0, 0, 2, 0, 0, -1, -1, 0, 0, 2, 6, 77, 117, 108, 65, 100, 100, 2, 0, 3, 0, 1, 0, 0, 0, 3, 0, 0, -1, -1, 0, 1, -1, -1, 0, 2, 2, 6, 77, 117, 108, 65, 100, 100, 2, 0, 3, 0, 1, 0, 0, 0, 1, 0, 0, -1, -1, 0, 3, 0, 4, 0, 0, 2, 11, 85, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 1, 0, 1, 0, 17, 0, 5, 0, 0, 2, 6, 83, 105, 110, 79, 115, 99, 2, 0, 2, 0, 1, 0, 0, 0, 6, 0, 0, -1, -1, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 2, 0, 1, 0, 2, 0, 7, 0, 0, -1, -1, 0, 4, 2, 5, 67, 111, 109, 98, 78, 2, 0, 4, 0, 1, 0, 0, 0, 8, 0, 0, -1, -1, 0, 5, -1, -1, 0, 5, -1, -1, 0, 6, 2, 5, 76, 70, 83, 97, 119, 2, 0, 2, 0, 1, 0, 0, 0, 0, 0, 1, -1, -1, 0, 0, 2, 6, 77, 117, 108, 65, 100, 100, 2, 0, 3, 0, 1, 0, 0, 0, 10, 0, 0, -1, -1, 0, 1, -1, -1, 0, 2, 2, 6, 77, 117, 108, 65, 100, 100, 2, 0, 3, 0, 1, 0, 0, 0, 1, 0, 0, -1, -1, 0, 3, 0, 11, 0, 0, 2, 11, 85, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 1, 0, 1, 0, 17, 0, 12, 0, 0, 2, 6, 83, 105, 110, 79, 115, 99, 2, 0, 2, 0, 1, 0, 0, 0, 13, 0, 0, -1, -1, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 2, 0, 1, 0, 2, 0, 14, 0, 0, -1, -1, 0, 4, 2, 5, 67, 111, 109, 98, 78, 2, 0, 4, 0, 1, 0, 0, 0, 15, 0, 0, -1, -1, 0, 5, -1, -1, 0, 5, -1, -1, 0, 6, 2, 3, 79, 117, 116, 2, 0, 3, 0, 0, 0, 0, -1, -1, 0, 0, 0, 16, 0, 0, 0, 9, 0, 0, 0, 0]
       );
+      var pitchDef = Uint8Array.from(
+        [83, 67, 103, 102, 0, 0, 0, 2, 0, 1, 11, 80, 105, 116, 99, 104, 70, 111, 108, 108, 111, 119, 0, 0, 0, 27, 64, 0, 0, 0, 61, 76, -52, -51, 67, -36, 0, 0, 66, 112, 0, 0, 69, 122, 0, 0, 66, -56, 0, 0, 65, -128, 0, 0, 64, -32, 0, 0, 60, -93, -41, 10, 63, 0, 0, 0, 63, -128, 0, 0, 0, 0, 0, 0, 62, -103, -103, -102, 61, -52, -52, -51, 61, 35, -41, 10, 60, -2, -82, -90, 60, 114, 51, -15, 60, 66, -34, -41, 59, -20, 37, -51, 61, 21, -20, 90, 60, -15, 102, -113, 60, 30, 87, -51, 60, -43, -92, 59, 60, -67, 73, 95, 61, 26, -33, -99, 60, 44, -93, 36, 59, -122, -1, -72, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 3, 111, 117, 116, 0, 0, 0, 0, 0, 0, 0, 29, 7, 67, 111, 110, 116, 114, 111, 108, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 2, 73, 110, 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, -1, -1, -1, -1, 0, 0, 0, 0, 2, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 2, 9, 65, 109, 112, 108, 105, 116, 117, 100, 101, 1, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 1, -1, -1, -1, -1, 0, 0, 0, 1, 1, 5, 80, 105, 116, 99, 104, 1, 0, 0, 0, 11, 0, 0, 0, 2, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 2, -1, -1, -1, -1, 0, 0, 0, 3, -1, -1, -1, -1, 0, 0, 0, 4, -1, -1, -1, -1, 0, 0, 0, 5, -1, -1, -1, -1, 0, 0, 0, 6, -1, -1, -1, -1, 0, 0, 0, 7, -1, -1, -1, -1, 0, 0, 0, 8, -1, -1, -1, -1, 0, 0, 0, 9, -1, -1, -1, -1, 0, 0, 0, 10, -1, -1, -1, -1, 0, 0, 0, 11, 1, 1, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0, 0, 0, 4, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 9, 1, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0, 0, 0, 4, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 0, 1, 8, 76, 70, 78, 111, 105, 115, 101, 49, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1, -1, -1, -1, 0, 0, 0, 12, 1, 6, 77, 117, 108, 65, 100, 100, 1, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 7, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 13, -1, -1, -1, -1, 0, 0, 0, 13, 1, 6, 86, 97, 114, 83, 97, 119, 2, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 11, 0, 0, 0, 8, 0, 0, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0, 0, 0, 9, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 2, 6, 86, 97, 114, 83, 97, 119, 2, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 11, 0, 0, 0, 8, 0, 0, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0, 0, 0, 11, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 2, 6, 86, 97, 114, 83, 97, 119, 2, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 6, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 11, 0, 0, 0, 8, 0, 0, 0, 0, 2, 12, 66, 105, 110, 97, 114, 121, 79, 112, 85, 71, 101, 110, 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0, 0, 0, 13, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 2, 4, 83, 117, 109, 51, 2, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 14, 0, 0, 0, 0, 0, 0, 0, 12, 0, 0, 0, 0, 0, 0, 0, 10, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 15, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 15, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 16, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 17, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 17, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 19, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 18, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 21, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 19, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 23, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 20, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 25, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 15, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 16, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 22, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 18, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 23, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 20, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 24, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 22, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 25, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 24, -1, -1, -1, -1, 0, 0, 0, 0, 2, 8, 65, 108, 108, 112, 97, 115, 115, 78, 2, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 26, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, 14, -1, -1, -1, -1, 0, 0, 0, 26, -1, -1, -1, -1, 0, 0, 0, 0, 2, 3, 79, 117, 116, 2, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 21, 0, 0, 0, 0, 0, 0, 0, 27, 0, 0, 0, 0, 0, 0]
+      );
       var dumpOSC = function(code) {
         code = code ? code : 1;
         sendOSC_t("/dumpOSC", "i", code);
       };
+      var cmdPeriod = function() {
+        sendOSC_t("/g_freeAll", "i", 0);
+      }
       // send the "AnalogBubbles" synth-def to the server
       var d_bubbles = function() {
         sendOSC_t("/d_recv", "b", bubblesDef);
       };
       // start a synth with the "AnalogBubbles" synth-def
       var s_bubbles = function() {
+        cmdPeriod();
         sendOSC_t("/s_new", "siii", "AnalogBubbles", 1000, 1, 0);
       };
+      // send the "PitchFollow" synth-def to the server
+      var d_pitch = function() {
+        sendOSC_t("/d_recv", "b", pitchDef);
+      };
+      // start a synth with the "PitchFollow" synth-def
+      var s_pitch = function() {
+        cmdPeriod();
+        sendOSC_t("/s_new", "siii", "PitchFollow", 1000, 1, 0);
+      };
+      var boot = function() {
+        var bootEl    = document.getElementById('boot');
+        var numInEl   = document.getElementById('num-inputs');
+        var numOutEl  = document.getElementById('num-outputs');
+        var args      = Module['arguments'];
+        if (numInEl) {
+          args[args.indexOf('-i') + 1] = numInEl.value;
+        }
+        if (numOutEl) {
+          args[args.indexOf('-o') + 1] = numOutEl.value;
+        }
+        Module.callMain(args);
+        if (bootEl  ) bootEl  .disabled = true;
+        if (numInEl ) numInEl .disabled = true;
+        if (numOutEl) numOutEl.disabled = true;
+      }
     </script>
     <title>scsynth</title>
     <style>
@@ -87,7 +119,6 @@
       }
 
       #controls {
-        display: inline-block;
         float: left;
         vertical-align: top;
         margin-top: 30px;
@@ -115,8 +146,11 @@
     <div class="emscripten" id="status">Downloading...</div>
 
     <span id='controls'>
-      <span><input type="button" id="boot" disabled="disabled" value="Boot" onclick="Module.callMain(Module['arguments']);">
-      </span>
+      <input type="button" id="boot" disabled="disabled" value="Boot" onclick="boot();">
+      Inputs:
+      <input type="number" id="num-inputs"  value="0" min="0" max="2" step="1">
+      Outputs:
+      <input type="number" id="num-outputs" value="2" min="0" max="2" step="1">
     </span>
 
     <div class="emscripten">
@@ -182,6 +216,10 @@
         },
         onRuntimeInitialized: function() {
           bootElement.disabled = false;
+          Module.print("For sound examples, after booting open the console (ctrl-shift-J in Chrome)."); 
+          Module.print("Try d_bubbles() followed by s_bubbles()."); 
+          Module.print("When using microphone (Input = 2), try d_pitch() followed by s_pitch().");
+          Module.print("cmdPeriod() to free");
         }
       };
       Module.setStatus('Downloading...');
