--- a/wasm/index.html
+++ b/wasm/index.html
@@ -218,7 +218,7 @@
           bootElement.disabled = false;
           Module.print("For sound examples, after booting open the console (ctrl-shift-J in Chrome)."); 
           Module.print("Try d_bubbles() followed by s_bubbles()."); 
-          Module.print("When using microphone (Input = 2), try d_pitch() followed by s_pitch().");
+          Module.print("When using microphone (Inputs = 2), try d_pitch() followed by s_pitch().");
           Module.print("cmdPeriod() to free");
         }
       };
