--- a/HelpSource/Browse.html
+++ b/HelpSource/Browse.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     <link rel='stylesheet' href='./scdoc.css' type='text/css' />
+    <link rel='stylesheet' href='./frontend.css' type='text/css' />
     <link rel='stylesheet' href='./custom.css' type='text/css' />
     <link rel='stylesheet' href='./browse.css' type='text/css' />
     <script src="lib/jquery.min.js"></script>
@@ -16,7 +17,7 @@
     <script src="docmap.js" type="text/javascript"></script>
     <script src="scdoc.js" type="text/javascript"></script>
     <script src="browse.js"></script>
-</head>
+    <script src="frontend.js"></script>
 
 <body>
     <noscript>
