--- a/HelpSource/OldHelpWrapper.html
+++ b/HelpSource/OldHelpWrapper.html
@@ -3,11 +3,13 @@
 <head>
     <title>Old Help</title>
     <link rel='stylesheet' href='./scdoc.css' type='text/css' />
+    <link rel='stylesheet' href='./frontend.css' type='text/css' />
     <link rel='stylesheet' href='./custom.css' type='text/css' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     <script src="lib/jquery.min.js"></script>
     <script src="scdoc.js" type="text/javascript"></script>
+    <script src="frontend.js"></script>
     <style>
         #oldframe {
             border: none;
