--- a/HelpSource/Overviews/Methods.html
+++ b/HelpSource/Overviews/Methods.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     <link rel='stylesheet' href='../scdoc.css' type='text/css' />
+    <link rel='stylesheet' href='../frontend.css' type='text/css' />
     <link rel='stylesheet' href='../custom.css' type='text/css' />
     <script src="../lib/jquery.min.js"></script>
     <script>
@@ -13,6 +14,7 @@
     </script>
     <script src="../docmap.js" type="text/javascript"></script>
     <script src="../scdoc.js" type="text/javascript"></script>
+    <script src="../frontend.js" type="text/javascript"></script>
 <noscript>
 <p>The method index needs JavaScript.
 </noscript>
