add themes for html docs

--- a/HelpSource/Search.html
+++ b/HelpSource/Search.html
@@ -17,6 +17,7 @@
     <script src="scdoc.js" type="text/javascript"></script>
     <script src="search.js"></script>
     <script src="frontend.js"></script>
+    <script src="theme.js"></script>
 </head>
 
 <body onload="onLoad()">
