--- a/HelpSource/Browse.html
+++ b/HelpSource/Browse.html
@@ -18,6 +18,7 @@
     <script src="scdoc.js" type="text/javascript"></script>
     <script src="browse.js"></script>
     <script src="frontend.js"></script>
+    <script src="theme.js"></script>
 
 <body>
     <noscript>
