--- a/HelpSource/Overviews/Methods.html
+++ b/HelpSource/Overviews/Methods.html
@@ -15,6 +15,7 @@
     <script src="../docmap.js" type="text/javascript"></script>
     <script src="../scdoc.js" type="text/javascript"></script>
     <script src="../frontend.js" type="text/javascript"></script>
+    <script src="../theme.js" type="text/javascript"></script>
 <noscript>
 <p>The method index needs JavaScript.
 </noscript>
