--- a/HelpSource/BrokenLink.html
+++ b/HelpSource/BrokenLink.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Broken link</title>
+    <script src="theme.js"></script>
     <link rel='stylesheet' href='./scdoc.css' type='text/css' />
     <link rel='stylesheet' href='./frontend.css' type='text/css' />
     <link rel='stylesheet' href='./custom.css' type='text/css' />
