--- a/HelpSource/Overviews/Classes.html
+++ b/HelpSource/Overviews/Classes.html
@@ -4,9 +4,9 @@
     <title>Classes | SuperCollider Help</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
-    <script src="../theme.js" type="text/javascript"></script>
     <link rel='stylesheet' href='../scdoc.css' type='text/css' />
     <link rel='stylesheet' href='../frontend.css' type='text/css' />
+    <link rel='stylesheet' id='../scdoc-theme' href='./themes/default.css' type='text/css' />
     <link rel='stylesheet' href='../custom.css' type='text/css' />
     <script src="../lib/jquery.min.js"></script>
     <script>
