--- a/HelpSource/Overviews/Methods.html
+++ b/HelpSource/Overviews/Methods.html
@@ -6,6 +6,7 @@
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     <link rel='stylesheet' href='../scdoc.css' type='text/css' />
     <link rel='stylesheet' href='../frontend.css' type='text/css' />
+    <link rel='stylesheet' id='scdoc-theme' href='../themes/default.css' type='text/css' />
     <link rel='stylesheet' href='../custom.css' type='text/css' />
     <script src="../lib/jquery.min.js"></script>
     <script>
@@ -15,7 +16,6 @@
     <script src="../docmap.js" type="text/javascript"></script>
     <script src="../scdoc.js" type="text/javascript"></script>
     <script src="../frontend.js" type="text/javascript"></script>
-    <script src="../theme.js" type="text/javascript"></script>
 <noscript>
 <p>The method index needs JavaScript.
 </noscript>
