--- a/HelpSource/Search.html
+++ b/HelpSource/Search.html
@@ -5,9 +5,9 @@
     <title>Search | SuperCollider Help</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
-    <script src="theme.js"></script>
     <link rel='stylesheet' href='./scdoc.css' type='text/css' />
     <link rel='stylesheet' href='./frontend.css' type='text/css' />
+    <link rel='stylesheet' id='scdoc-theme' href='./themes/default.css' type='text/css' />
     <link rel='stylesheet' href='./custom.css' type='text/css' />
     <script src="lib/jquery.min.js"></script>
     <script>
