--- a/HelpSource/Overviews/Classes.html
+++ b/HelpSource/Overviews/Classes.html
@@ -6,7 +6,7 @@
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     <link rel='stylesheet' href='../scdoc.css' type='text/css' />
     <link rel='stylesheet' href='../frontend.css' type='text/css' />
-    <link rel='stylesheet' id='../scdoc-theme' href='./themes/default.css' type='text/css' />
+    <link rel='stylesheet' id='scdoc-theme' href='../themes/default.css' type='text/css' />
     <link rel='stylesheet' href='../custom.css' type='text/css' />
     <script src="../lib/jquery.min.js"></script>
     <script>
