--- a/HelpSource/Browse.html
+++ b/HelpSource/Browse.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     <link rel='stylesheet' href='./scdoc.css' type='text/css' />
-    <link rel='stylesheet' href='./frontend.css' type='text/css' />
     <link rel='stylesheet' id='scdoc-theme' href='./themes/default.css' type='text/css' />
+    <link rel='stylesheet' href='./frontend.css' type='text/css' />
     <link rel='stylesheet' href='./custom.css' type='text/css' />
     <link rel='stylesheet' href='./browse.css' type='text/css' />
     <script src="lib/jquery.min.js"></script>
@@ -15,11 +15,11 @@
         var scdoc_title = "Document Browser";
         var scdoc_sc_version = "";
     </script>
-    <script src="docmap.js" type="text/javascript"></script>
     <script src="scdoc.js" type="text/javascript"></script>
+    <script src="docmap.js" type="text/javascript"></script>
     <script src="browse.js"></script>
     <script src="frontend.js"></script>
-
+</head>
 <body>
     <noscript>
         <!--<meta http-equiv="refresh" content="3; URL=Overviews/Categories.html">
