--- a/platform/wasm/example/index.html
+++ b/platform/wasm/example/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>scsynth.wasm</title>
     <link rel="stylesheet" href="style.css" />
     <script src="osc.min.js" type="text/javascript"></script>
 </head>
