add osc reply to wasm example

--- a/platform/wasm/example/index.html
+++ b/platform/wasm/example/index.html
@@ -118,10 +118,17 @@
         </div>
 
         <div>
-            <h2 class="section-header">console</h2>
+            <h2 class="section-header">output</h2>
+            <p>console</p>
             <div class="fullwidth">
-                <textarea id="console" rows="16" readonly style="width: 100%;"></textarea>
+                <textarea id="console" rows="8" readonly style="width: 100%;"></textarea>
             </div>
+
+            <p>osc reply</p>
+            <div class="fullwidth">
+                <textarea id="console-osc" rows="8" readonly style="width: 100%;"></textarea>
+            </div>
+        </div>
         </div>
     </div>
 
