add native OscMessage builder to wasm

--- a/platform/wasm/example/index.html
+++ b/platform/wasm/example/index.html
@@ -89,7 +89,7 @@
             <div class="controls">
                 <button onclick="bootScsynth(0, 2);" id="boot">boot</button>
                 <button onclick="playGcd();">play gcd</button>
-                <button onclick="oscClient?.cmdPeriod();">cmdperiod</button>
+                <button onclick="cmdPeriod();">cmdperiod</button>
             </div>
         </div>
 
