--- a/HelpSource/Overviews/Documents.html
+++ b/HelpSource/Overviews/Documents.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' id='scdoc-theme' href='./../static/themes/default.css' type='text/css' />
     <link rel='stylesheet' href='./../frontend.css' type='text/css' />
     <link rel='stylesheet' href='./../custom.css' type='text/css' />
-    <script src="./../staticc/lib/jquery.min.js"></script>
+    <script src="./../static/lib/jquery.min.js"></script>
     <script>
         var scdoc_title = "Documents";
         var scdoc_sc_version = "";
