--- a/HelpSource/Overviews/Classes.html
+++ b/HelpSource/Overviews/Classes.html
@@ -14,7 +14,7 @@
         var scdoc_sc_version = "";
     </script>
     <script src="./../static/scdoc.js" type="text/javascript"></script>
-    <script src="./../static/docmap.js" type="text/javascript"></script>
+    <script src="./../docmap.js" type="text/javascript"></script>
     <script src="./../frontend.js" type="text/javascript"></script>
 <noscript>
 <p>The class index needs JavaScript.
