--- a/HelpSource/Search.html
+++ b/HelpSource/Search.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='./static/scdoc.css' type='text/css' />
     <link rel='stylesheet' href='./static/frontend.css' type='text/css' />
     <link rel='stylesheet' id='scdoc-theme' href='./static/themes/default.css' type='text/css' />
-    <link rel='stylesheet' href='./static/custom.css' type='text/css' />
+    <link rel='stylesheet' href='./custom.css' type='text/css' />
     <script src="./static/lib/jquery.min.js"></script>
     <script>
         var scdoc_title = "Search";
